<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/min_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            style="@style/button_style"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/main_Title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/layout1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/Button_temperature"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    style="@style/button_style"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/temprature"
                    android:text="@string/btn_Temperature"
                    android:textStyle="bold"
                    android:typeface="sans"/>
                <Button
                    android:id="@+id/Button_length"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/lenght"
                    android:text="@string/btn_Length"
                    android:textStyle="bold"
                    android:typeface="sans"/>
                <Button
                    android:id="@+id/Button_weight"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/weight"
                    android:text="@string/btn_Weight"
                    android:textStyle="bold"
                    android:typeface="sans"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/Button_speed"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/speed"
                    android:text="@string/btn_Speed"
                    android:textStyle="bold"
                    android:typeface="sans"/>
                <Button
                    android:id="@+id/Button_volume"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/voulume"
                    android:text="@string/btn_Volume"
                    android:textStyle="bold"
                    android:typeface="sans"/>
                <Button
                    android:id="@+id/Button_area"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/area"
                    android:text="@string/btn_Area"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:weightSum="3">
                <Button
                    android:id="@+id/Button_fuelConsumption"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/fuel"
                    android:text="@string/btn_FuelConsumption"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/Button_time"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/time"
                    android:text="@string/btn_Time"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/Button_pressure"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/pressure"
                    android:text="@string/btn_Pressure"
                    android:textStyle="bold"
                    android:fontFamily="Ro"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:weightSum="3">
                <Button
                    android:id="@+id/Button_force"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:singleLine="false"
                    android:text="@string/btn_Force"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/Banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
